src/styles.css
/* ... */
#mlb2-23104662.ml-form-embedContainer .ml-form-embedWrapper .ml-form-embedBody .ml-form-checkboxRow label p:last-child {
  margin: 0;
}

#mlb2-23104662.ml-form-embedContainer .ml-form-embedWrapper .ml-form-embedBody .ml-form-embedSubmit {
  margin: 0 0 20px 0;
  float: left;
  width: 100%;
}

#mlb2-23104662.ml-form-embedContainer .ml-form-embedWrapper .ml-form-embedBody .ml-form-embedSubmit button {
  background-color: #151515 !important;
  border: none !important;
  border-radius: 4px !important;
  box-shadow: none !important;
  color: #F5F3E7 !important;
  cursor: pointer;
  font-family: Helvetica, sans-serif !important;
  font-size: 14px !important;
  font-weight: 700 !important;
  line-height: 21px !important;
  height: auto;
  padding: 10px !important;
  width: 100% !important;
  box-sizing: border-box !important;
}

#mlb2-23104662.ml-form-embedContainer .ml-form-embedWrapper .ml-form-embedBody .ml-form-embedSubmit button.loading {
  display: none;
}

#mlb2-23104662.ml-form-embedContainer .ml-form-embedWrapper .ml-form-embedBody .ml-form-embedSubmit button:hover {
  background-color: #151515 !important;
}

.ml-subscribe-close {
  width: 30px;
  height: 30px;
  background: url('https://assets.mlcdn.com/ml/images/default/modal_close.png') no-repeat;
  background-size: 30px;
  cursor: pointer;
  margin-top: -10px;
  margin-right: -10px;
  position: absolute;
  top: 0;
  right: 0;
}

.ml-error input,
.ml-error textarea,
.ml-error select {
  border-color: red !important;
}

.ml-error .custom-checkbox-radio-list {
  border: 1px solid red !important;
  border-radius: 0px;
  padding: 10px;
}

.ml-error .label-description,
.ml-error .label-description p,
.ml-error .label-description p a,
.ml-error label:first-child {
  color: #ff0000 !important;
}

#mlb2-23104662.ml-form-embedContainer .ml-form-embedWrapper .ml-form-embedBody .ml-form-checkboxRow.ml-error .label-description p,
#mlb2-23104662.ml-form-embedContainer .ml-form-embedWrapper .ml-form-embedBody .ml-form-checkboxRow.ml-error .label-description p:first-letter {
  color: #ff0000 !important;
}

@media only screen and (max-width: 400px) {

  .ml-form-embedWrapper.embedDefault,
  .ml-form-embedWrapper.embedPopup {
    width: 100% !important;
  }

  .ml-form-formContent.horozintalForm {
    float: left !important;
  }

  .ml-form-formContent.horozintalForm .ml-form-horizontalRow {
    height: auto !important;
    width: 100% !important;
    float: left !important;
  }

  .ml-form-formContent.horozintalForm .ml-form-horizontalRow .ml-input-horizontal {
    width: 100% !important;
  }

  .ml-form-formContent.horozintalForm .ml-form-horizontalRow .ml-input-horizontal>div {
    padding-right: 0px !important;
    padding-bottom: 10px;
  }

  .ml-form-formContent.horozintalForm .ml-button-horizontal {
    width: 100% !important;
  }

  .ml-form-formContent.horozintalForm .ml-button-horizontal.labelsOn {
    padding-top: 0px !important;
  }

}

.ml-mobileButton-horizontal {
  display: none;
}

#mlb2-23104662 .ml-mobileButton-horizontal button {

  background-color: #151515 !important;
  border-color: #151515 !important;
  border-style: solid !important;
  border-width: 1px !important;
  border-radius: 4px !important;
  box-shadow: none !important;
  color: #F5F3E7 !important;
  cursor: pointer;
  font-family: Helvetica, sans-serif !important;
  font-size: 14px !important;
  font-weight: 700 !important;
  line-height: 20px !important;
  padding: 10px !important;
  width: 100% !important;

}

@media only screen and (max-width: 400px) {
  #mlb2-23104662.ml-form-embedContainer .ml-form-embedWrapper .ml-form-embedBody .ml-form-formContent.horozintalForm {
    padding: 0 0 10px 0 !important;
  }

  .ml-hide-horizontal {
    display: none !important;
  }

  .ml-form-formContent.horozintalForm .ml-button-horizontal {
    display: none !important;
  }

  .ml-mobileButton-horizontal {
    display: inline-block !important;
    margin-bottom: 20px;
    width: 100%;
  }

  .ml-form-formContent.horozintalForm .ml-form-horizontalRow .ml-input-horizontal>div {
    padding-bottom: 0px !important;
  }
}

@media only screen and (max-width: 400px) {
  .ml-form-formContent.horozintalForm .ml-form-horizontalRow .horizontal-fields {
    margin-bottom: 10px !important;
    width: 100% !important;
  }
}

